// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser should postprocess elements allow modifiy element metadata 1`] = `
Object {
  "attributes": Object {
    "contenteditable": Object {
      "enum": Array [
        "",
        "true",
        "false",
      ],
      "omit": true,
    },
    "dir": Object {
      "enum": Array [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": Object {
      "enum": Array [
        "true",
        "false",
      ],
    },
    "hidden": Object {
      "boolean": true,
    },
    "tabindex": Object {
      "enum": Array [
        /-\\?\\\\d\\+/,
      ],
    },
  },
  "deprecatedAttributes": Array [
    "contextmenu",
  ],
  "flow": true,
  "permittedContent": Array [
    "@flow",
    "dt",
    "dd",
  ],
  "tagName": "i",
  "void": false,
}
`;

exports[`parser should postprocess elements allow modifiy element metadata 2`] = `
Object {
  "attributes": Object {
    "contenteditable": Object {
      "enum": Array [
        "",
        "true",
        "false",
      ],
      "omit": true,
    },
    "dir": Object {
      "enum": Array [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": Object {
      "enum": Array [
        "true",
        "false",
      ],
    },
    "hidden": Object {
      "boolean": true,
    },
    "tabindex": Object {
      "enum": Array [
        /-\\?\\\\d\\+/,
      ],
    },
  },
  "deprecatedAttributes": Array [
    "contextmenu",
  ],
  "flow": true,
  "permittedContent": Array [
    "@phrasing",
  ],
  "phrasing": true,
  "tagName": "u",
  "void": false,
}
`;
